--- a/catalog.html
+++ b/catalog.html
@@ -11,8 +11,8 @@
         <img class="logo" src="./media/Logo.svg" alt="">
         <nav class="menu">
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Catalogs</a></li>
+              <li><a href="home.html">Home</a></li>
+              <li><a href="catalog.html">Catalogs</a></li>
               <li><a href="#">blog</a></li>
             </ul>
           </nav>
@@ -21,7 +21,56 @@
 <img src="./media/🦆 icon _Search_.svg" alt="">
           </div>
     </div>
+    
     <h1 class="title">FEATURED COLLECTIONS</h1>
     <div class="green_rectangle"></div>
+    <div class="catalog">
+    </div>
+    <div class="footer catalog_footer">
+      <div class="footer_content">
+          <div class="footer_container">
+              <h2 class="footer_main_text">FIND A STORE</h2>
+              <h2 class="footer_main_text">SIGN UP FOR EMAIL</h2>
+              <h2 class="footer_main_text">BECOME A MEMBER</h2>
+              <h2 class="footer_main_text">STUDENT DISCOUNT</h2>
+          </div>
+          <div class="footer_container">
+              <h2 class="footer_main_text">PAYMENT</h2> 
+              <div class="payment_img_container">
+                  <img src="./media/Group.svg" alt="">
+                  <img src="./media/Group 57.svg" alt="">
+                  <img src="./media/Group 58.svg" alt="">
+                  <img src="./media/Group 54.svg" alt="">
+                  <img src="./media/Group 56.svg" alt="">
+                  <img src="./media/Group 55.svg" alt="">
+              </div>
+          </div>
+          <div class="footer_container">
+              <h2 class="footer_main_text">SERVICE</h2>
+              <h2 class="footer_secondary_text">Careers</h2>
+              <h2 class="footer_secondary_text">Store Finder</h2>
+              <h2 class="footer_secondary_text">Account</h2>
+              <h2 class="footer_secondary_text">Contact Us</h2>
+          </div>
+          <div class="footer_container">
+              <h2 class="footer_main_text">SERVICE</h2>
+              <h2 class="footer_secondary_text">Order Status</h2>
+              <h2 class="footer_secondary_text">Delivery</h2>
+              <h2 class="footer_secondary_text">Returns</h2>
+              <h2 class="footer_secondary_text">Payment Options</h2>
+              <h2 class="footer_secondary_text">Contact Us</h2>
+          </div>
+          <div class="footer_container">
+              <h2 class="footer_main_text">NEWS ABOUT</h2>
+              <h2 class="footer_secondary_text">Investor</h2>
+              <h2 class="footer_secondary_text">Careers</h2>
+              <h2 class="footer_secondary_text">Sustainable Innovation</h2>
+              <h2 class="footer_secondary_text">UK Modern Slavery Act</h2>
+          </div>
+      </div>
+      <hr>
+      <h2 class="footer_secondary_text end_content">Copyright Dotcreativemarket, All Rights Reserved</h2>
+  </div>
+    <script src="./catalog.js"></script>
 </body>
 </html>
