--- a/home.html
+++ b/home.html
@@ -11,8 +11,8 @@
         <img class="logo" src="./media/Logo.svg" alt="">
         <nav class="menu">
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Catalogs</a></li>
+              <li><a href="home.html">Home</a></li>
+              <li><a href="catalog.html">Catalogs</a></li>
               <li><a href="#">blog</a></li>
             </ul>
           </nav>
@@ -22,7 +22,7 @@
           </div>
     </div>
     <div class="content">
-    <button class="shop_now">SHOP NOW</button>
+    <button class="shop_now"  onclick="window.location.href = 'catalog.html'">SHOP NOW</button>
 </div>
 
     <div class="trackstore">
@@ -56,18 +56,18 @@
             <h2 class="tips_text">HIGH-QUALITY <br>
                 SNEAKER</h2>
     </div>
-    <button class="shop_now under_tips">SHOP NOW</button>
+    <button class="shop_now under_tips"  onclick="window.location.href = 'catalog.html'">SHOP NOW</button>
     <div class="big_gender_container">
         <div class="gender_container">
             <img src="./media/Rectangle 19.png" alt="">
             <h2 class="gender_title">MEN APPAREL</h2>
-            <button class="shop_now gender_button">SHOP NOW</button>
+            <button class="shop_now gender_button"  onclick="window.location.href = 'catalog.html'">SHOP NOW</button>
         </div>
         <div class="gender_container"></div>
         <div class="gender_container">
             <img src="./media/bruce-mars-HHXdPG_eTIQ-unsplash 1.png" alt="">
             <h2 class="gender_title">WOMEN APPAREL</h2>
-            <button class="shop_now gender_button">SHOP NOW</button>
+            <button class="shop_now gender_button" onclick="window.location.href = 'catalog.html'">SHOP NOW</button>
         </div>
     </div>
     <div class="position_img_container other">
@@ -84,7 +84,7 @@
     </div>
     <h2 class="description">Nulla accumsan malesuada egestas nam <br>
         dignissim. Quis vulputate blandit duis</h2>
-        <button class="shop_now under_description">SHOP NOW</button>
+        <button class="shop_now under_description"  onclick="window.location.href = 'catalog.html'">SHOP NOW</button>
         </div>
         <img class="other_rectangle" src="./media/Rectangle 15-2.svg" alt="">
         <img class="white_sneaker" src="./media/rohit-tandon-9wg5jCEPBsw-unsplash 2.png" alt="">
@@ -99,7 +99,7 @@
                 <h2 class="footer_main_text">STUDENT DISCOUNT</h2>
             </div>
             <div class="footer_container">
-                <h2class="footer_main_text">PAYMENT</h2> 
+                <h2 class="footer_main_text">PAYMENT</h2> 
                 <div class="payment_img_container">
                     <img src="./media/Group.svg" alt="">
                     <img src="./media/Group 57.svg" alt="">
@@ -138,6 +138,6 @@
     
     
   
-    <script src="./main.js"></script>
+   
 </body>
 </html>
