чутка доработал корзину

--- a/cart.html
+++ b/cart.html
@@ -17,7 +17,7 @@
             </ul>
           </nav>
           <div class="function">
-<img src="./media/🦆 icon _cart_.svg" alt="">
+<a href="./cart.html"><img src="./media/🦆 icon _cart_.svg" alt=""></a>
 <img src="./media/🦆 icon _Search_.svg" alt="">
           </div>
     </div>
