фильтрация + довел до ума корзину

--- a/catalog.html
+++ b/catalog.html
@@ -13,17 +13,26 @@
             <ul>
               <li><a href="home.html">Home</a></li>
               <li><a href="catalog.html">Catalogs</a></li>
-              <li><a href="#">blog</a></li>
+              <li><a href="sign.html">Change account</a></li>
             </ul>
           </nav>
           <div class="function">
 <a href="./cart.html"><img src="./media/🦆 icon _cart_.svg" alt=""></a>
-<img src="./media/🦆 icon _Search_.svg" alt="">
+<!-- <img src="./media/🦆 icon _Search_.svg" alt=""> -->
           </div>
     </div>
     
     <h1 class="title">FEATURED COLLECTIONS</h1>
+    
     <div class="green_rectangle"></div>
+    <div class="filtex_box">
+        <input class="search" type="text" placeholder="name of the sneaker">
+        <select class="select" name="filter">
+            <option value="default">Default</option>
+        <option value="from_expensive">From expensive</option>
+        <option value="from_expensive">From cheap</option>
+        </select>
+    </div>
     <div class="catalog">
     </div>
     <div class="footer catalog_footer">
