--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./home.css">
 </head>
 <body>
     <div class="nav_box">
@@ -13,12 +13,12 @@
             <ul>
               <li><a href="home.html">Home</a></li>
               <li><a href="catalog.html">Catalogs</a></li>
-              <li><a href="#">blog</a></li>
+              <li><a href="sign.html">Change account</a></li>
             </ul>
           </nav>
           <div class="function">
 <a href="./cart.html"><img src="./media/🦆 icon _cart_.svg" alt=""></a>
-<img src="./media/🦆 icon _Search_.svg" alt="">
+<!-- <img src="./media/🦆 icon _Search_.svg" alt=""> -->
           </div>
     </div>
     <div class="content">
