--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="catalog.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="nav_box">
@@ -30,7 +31,7 @@
         <select class="select" name="filter">
             <option value="default">Default</option>
         <option value="from_expensive">From expensive</option>
-        <option value="from_expensive">From cheap</option>
+        <option value="from_cheap">From cheap</option>
         </select>
     </div>
     <div class="catalog">
@@ -80,6 +81,10 @@
       <hr>
       <h2 class="footer_secondary_text end_content">Copyright Dotcreativemarket, All Rights Reserved</h2>
   </div>
+  <div id="notification" class="notification" style="display: none;">
+    <p class="add_to_car">item added to cart</p>
+  </div>
+  
     <script src="./catalog.js"></script>
 </body>
 </html>
