Сделал личный кабинет и валидацию для паролей

--- a/register.html
+++ b/register.html
@@ -12,6 +12,7 @@
         <input class="register_input" id="name" type="text" placeholder="name">
         <input class="register_input" id="email" type="email" placeholder="email">
         <input class="register_input" id="password" type="password" placeholder="password">
+        <div class="error-message"></div>
         <button class="register_button">Create New Account</button>
         <h2 class="or">OR</h2>
         <button class="sign_in" onclick="window.location.href = 'sign.html'" >Sign In</button>
