--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
               <li><a href="home.html">Home</a></li>
               <li><a href="catalog.html">Catalogs</a></li>
               <li><a href="sign.html">Change account</a></li>
+              <li><a href="office.html">Private office</a></li>
             </ul>
           </nav>
           <div class="function">
