--- a/cart.html
+++ b/cart.html
@@ -13,12 +13,13 @@
             <ul>
               <li><a href="home.html">Home</a></li>
               <li><a href="catalog.html">Catalogs</a></li>
-              <li><a href="#">blog</a></li>
+              <li><a href="sign.html">Change account</a></li>
+              <li><a href="office.html">Private office</a></li>
             </ul>
           </nav>
           <div class="function">
 <a href="./cart.html"><img src="./media/🦆 icon _cart_.svg" alt=""></a>
-<img src="./media/🦆 icon _Search_.svg" alt="">
+
           </div>
     </div>
 </div>
