--- a/catalog.html
+++ b/catalog.html
@@ -15,6 +15,7 @@
               <li><a href="home.html">Home</a></li>
               <li><a href="catalog.html">Catalogs</a></li>
               <li><a href="sign.html">Change account</a></li>
+              <li><a href="office.html">Private office</a></li>
             </ul>
           </nav>
           <div class="function">
@@ -25,7 +26,7 @@
     
     <h1 class="title">FEATURED COLLECTIONS</h1>
     
-    <div class="green_rectangle"></div>
+    <!-- <div class="green_rectangle"></div> -->
     <div class="filtex_box">
         <input class="search" type="text" placeholder="name of the sneaker">
         <select class="select" name="filter">
