--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
     </div>
     <div class="contents">
         <div class="content"  id="slide1" >
-        <button class="shop_now" onclick="window.location.href = 'catalog.html'">SHOP NOW</button>
+        <button class="shop_now f" onclick="window.location.href = 'catalog.html'">SHOP NOW</button>
     </div>
         <div class="content" id="slide2" >
             <button class="shop_now"  onclick="window.location.href = 'catalog.html'">SHOP NOW</button>
@@ -51,7 +51,7 @@
     <img class="other_asset" src="./media/Asset 1@3x 1.svg" alt="">
     <img class="sneaker" src="./media/Layer 4 1.svg" alt="">
 </div>
-    <div class="tips">
+    <!-- <div class="tips">
             <h2 class="tips_text">TOP CLASS <br> 
                 RUNNING SHOES</h2>
             <h2 class="tips_text">CLASSIC & CASUAL <br>
@@ -62,8 +62,8 @@
                 SHOES</h2>
             <h2 class="tips_text">HIGH-QUALITY <br>
                 SNEAKER</h2>
-    </div>
-    <button class="shop_now under_tips"  onclick="window.location.href = 'catalog.html'">SHOP NOW</button>
+    </div> -->
+    <!-- <button class="shop_now under_tips"  onclick="window.location.href = 'catalog.html'">SHOP NOW</button> -->
     <div class="big_gender_container">
         <div class="gender_container">
             <img src="./media/Rectangle 19.png" alt="">
@@ -95,7 +95,7 @@
         </div>
         <img class="other_rectangle" src="./media/Rectangle 15-2.svg" alt="">
         <img class="white_sneaker" src="./media/rohit-tandon-9wg5jCEPBsw-unsplash 2.png" alt="">
-        <img class="big_asset" src="./media/Group 18.svg" alt="">
+        <!-- <img class="big_asset" src="./media/Group 18.svg" alt=""> -->
     </div>
     <div class="footer">
         <div class="footer_content">
