--- a/office.html
+++ b/office.html
@@ -8,6 +8,21 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="nav_box">
+        <img class="logo" src="./media/Logo.svg" alt="">
+        <nav class="menu">
+            <ul>
+              <li><a href="home.html">Home</a></li>
+              <li><a href="catalog.html">Catalogs</a></li>
+              <li><a href="sign.html">Change account</a></li>
+              <li><a href="office.html">Private office</a></li>
+            </ul>
+          </nav>
+          <div class="function">
+<a href="./cart.html"><img src="./media/🦆 icon _cart_.svg" alt=""></a>
+<!-- <img src="./media/🦆 icon _Search_.svg" alt=""> -->
+          </div>
+    </div>
     
     <h1 class="title">Privacy office</h1>
     <div class="register_box">
